# functionalProgramming

Lab1/: lab1.cabal  stack.yaml
Lab1/app/: Main.hs
Lab1/src/: Create.hs  Delete.hs  FindById.hs  ListAll.hs  Update.hs  Utils.hs  initializeDb.sql
Lab2/lab2/: lab2.cabal  stack.yaml
Lab2/lab2/app/: Main.hs
Lab2/lab2/sample-data/: system1.txt  system2.txt  system3.txt
Lab2/lab2/src/: Lib.hs
Lab2/lab2/test/: Unit.hs
