cabal-version:  1.12
name:           lab2
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , parallel
  default-language: Haskell2010

executable lab2-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      lab2
    , base >=4.7 && <5
  default-language: Haskell2010

test-suite lab2-test
  type: exitcode-stdio-1.0
  main-is: Unit.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      lab2
    , base >=4.7 && <5
    , HUnit
  default-language: Haskell2010

